# burdello-bum-bum

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: main.py
backend/api/routers/: artifacts.py  ingest.py  mcp_api.py  mining.py  projects.py  search.py  skills.py  sources.py  stats.py  tasks.py  todoist.py  transcripts.py
backend/core/: config.py  database.py  models.py  schemas.py
backend/integrations/: litellm.py  todoist.py
backend/mcp/: stdio_server.py
backend/mcp_tools/: __init__.py
backend/mining/: __init__.py  engine.py
backend/mining/prompts/: artifact_extraction.txt  missing_elements.txt  project_extraction.txt  status_inference.txt  task_extraction.txt
backend/pipeline/: __init__.py  celery_app.py  chunking.py  discovery.py  embedding.py  model_cache.py  normalization.py  repo_resolver.py  storage.py  tasks.py
backend/scripts/: canonicalize_projects.py
backend/search/: engine.py  fulltext.py  vector.py
backend/skills/: __init__.py  base.py  mixins.py  registry.py
backend/skills/providers/: __init__.py  agy.py  aider.py  claude_code.py  codex.py  generic.py  kimi.py  vibe.py
backend/tests/: conftest.py  test_repo_resolver.py
backend/tests/fixtures/: agy_conversation.jsonl  aider_history.md  claude_session.jsonl  codex_session.jsonl  kimi_wire.jsonl  vibe_session.json
backend/tests/unit/: test_models.py
backend/tests/unit/test_api/: test_ingest.py  test_mining.py  test_projects.py  test_search.py  test_skills.py  test_sources.py  test_tasks.py  test_todoist.py  test_transcripts.py
backend/tests/unit/test_pipeline/: test_chunking.py  test_discovery.py  test_embedding.py  test_mining.py  test_normalization.py  test_storage.py
backend/tests/unit/test_skills/: test_agy.py  test_aider.py  test_claude_code.py  test_codex.py  test_generic.py  test_kimi.py  test_mixins.py  test_registry.py  test_vibe.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: ExportPanel.tsx  FilterBar.tsx  HierarchyTree.tsx  KanbanBoard.tsx  Layout.tsx  Navbar.tsx  ProjectCard.tsx  ProviderIcon.tsx  SearchPanel.tsx  Sidebar.tsx  StatsCards.tsx  StatusBadge.tsx  TaskCard.tsx  TranscriptCard.tsx
frontend/src/components/__tests__/: StatsCards.test.tsx  StatusBadge.test.tsx
frontend/src/hooks/: useApi.ts
frontend/src/pages/: ArtifactDetail.tsx  Artifacts.tsx  Dashboard.tsx  ProjectDetail.tsx  Projects.tsx  Search.tsx  Settings.tsx  Tasks.tsx  TodoistExport.tsx  TranscriptDetail.tsx  Transcripts.tsx
frontend/src/stores/: useAppStore.ts
thoughts/shared/plans/: 2026-06-10-project-classification-fix-mvp.md
worker/: package.json  wrangler.jsonc
worker/src/: index.ts
(+1 files in other folders)
